Assignment 2 complete except reserve button when clicked takes us to the form

--- a/aboutus.html
+++ b/aboutus.html
@@ -45,6 +45,9 @@
                 <div class="col-12 col-sm align-self-center"> 
                     <img src="img/logo.png" class="img-fluid">
                 </div>
+                <div class="col-12 col-md align-self-center">
+                    <a class="btn btn-warning  btn-secondary btn-lg btn-block" href="./index.html" role="button">Reserve Table</a>
+                </div>
             </div>
         </div>
     </header>
