--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
                     <div class="col-12 col-sm align-self-center"> 
                         <img src="img/logo.png" class="img-fluid">
                     </div>
+                    <div class="col-12 col-md align-self-center">
+                        <a class="btn btn-warning  btn-secondary btn-lg btn-block" href="./index.html" role="button">Reserve Table</a>
+                    </div>
                 </div>
             </div>
         </header>
@@ -77,7 +80,7 @@
                     <img class="d-flex mr-3 img-thumbnail align-self-center rounded float-right "
                         src="img/buffet.png" alt="Weekend Grand Buffet">
                     <div class="media-body">
-                        <h2 class="mt-0 mb-1">Weekend Grand Buffet</h2>
+                        <h2 class="mt-0">Weekend Grand Buffet<span class="badge badge-danger">New</span></h2>
                         <p class="hidden-xs-down">Featuring mouthwatering combinations with a choice of five 
                             different salads, six enticing appetizers, six main entrees 
                             and five choicest desserts. Free flowing bubbly and soft drinks. 
@@ -108,6 +111,68 @@
             </div>
         </div>
     </div>
+
+
+        <div class="row row-content align-items-center justify-content-center">
+            <div class="col-10 col-lg-6">
+                <div class="card">
+                    <h5 class="card-header card text-white bg-warning mb-3">Reverse A Table</h5>
+                    <div class="card-body">
+                        <div class="form-group row">
+                            <label for="telnum" class="col-12 col-md-2 col-form-lable">Number of Guest</label>
+                            <div class="col-sm-10">
+                                <div class=" form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                <label class="form-check-label" for="inlineRadio1">1</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                <label class="form-check-label" for="inlineRadio2">2</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                <label class="form-check-label" for="inlineRadio1">3</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                <label class="form-check-label" for="inlineRadio2">4</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                <label class="form-check-label" for="inlineRadio1">5</label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                <label class="form-check-label" for="inlineRadio6">6</label>
+                                </div> 
+                            </div>
+                        </div> 
+                            <form>                     
+                                <div class="form-group row">
+                                    <label for="telnum" class="col-12 col-md-2 col-form-lable">Date and Time</label>
+                                    <div class="col-md-5">
+                                        <input type="date" class="form-control" id="date" nwme="date"
+                                            placeholder="Ddte">
+                                    </div>
+                                    <div class="col-md-5">
+                                        <input type="time" class="form-control" id="time" nwme="time"
+                                            placeholder="Time">
+                                    </div>
+                                </div>
+                            </form> 
+                            <div class="form-group row">
+                                    <div class="offset-md-2 col-md-10">
+                                        <button type="submit" class="btn btn-primary">
+                                            Reserve
+                                        </button>
+                                    </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
 
     <footer class="footer">
         <div class="container">
