Assignment 3 complete ,but unable to color the radio buttons

--- a/index.html
+++ b/index.html
@@ -87,14 +87,101 @@
                         <img src="img/logo.png" class="img-fluid">
                     </div>
                     <div class="col-12 col-md align-self-center">
-                        <a role="button" class="btn btn-warning  nav-link btn-block" 
+<!-- Adding a Tooltip   <a role="button" class="btn btn-warning  nav-link btn-block" 
                         data-toggle="tooltip" data-html="true"
                         title="Or call us at <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform" >Reserve Table</a>
+                        data-placement="bottom" href="#reserveform" >Reserve Table</a>  --> 
+
+                        <!-- Button trigger modal -->
+                            <button type="button" class="btn btn-primary btn-warning btn-lg btn-block" data-toggle="modal" data-target="#reserveeModal">
+                                Reserve Table
+                            </button>                                              
                     </div>
                 </div>
             </div>
         </header>
+                        <!-- Modal -->
+                        <div class="modal fade" id="reserveeModal" tabindex="-1" role="dialog">
+                                <div class="modal-dialog modal-lg" role="content">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h4 class="modal-title">Reserve a Table</h4>
+                                            <button type="button" class="close" data-dismiss="modal">
+                                                &times;</button>
+                                            </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <form>
+                                                <div class="form-group row">
+                                                    <label for="telnum" class="col-12 col-md-2 col-form-lable">Number of Guest</label>
+                                                    <div class="col-sm-10">
+                                                        <div class=" form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                                        <label class="form-check-label" for="inlineRadio1">1</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                                        <label class="form-check-label" for="inlineRadio2">2</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                                        <label class="form-check-label" for="inlineRadio1">3</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                                        <label class="form-check-label" for="inlineRadio2">4</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                                        <label class="form-check-label" for="inlineRadio1">5</label>
+                                                        </div>
+                                                        <div class="form-check form-check-inline">
+                                                        <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                                        <label class="form-check-label" for="inlineRadio6">6</label>
+                                                        </div> 
+                                                    </div>
+                                                </div>
+                                                <div class="form-group row">
+                                                    <label for="telnum" class="col-12 col-md-2 col-form-lable">Section</label>
+                                                    <div class="col-sm-10">
+                                                <!--     <button type="button" class="btn btn-success ">NonSmoking</button>
+                                                        <button type="button" class="btn btn-danger">Smoking</button>  -->  
+                                                        <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                                            <label class="btn btn-secondary active">
+                                                                <input type="radio" class="nonSmoking" name="nonSmoking" id="nonSmoking" autocomplete="off" checked> NonSmoking
+                                                            </label>
+                                                            <label class="btn btn-secondary">
+                                                                <input type="radio" class="smoking" name="smoking" id="smoking" autocomplete="off"> Smoking
+                                                            </label>
+                                                        </div>
+                                                    </div>
+                                                </div>                    
+                                                    <div class="form-group row">
+                                                        <label for="telnum" class="col-12 col-md-2 col-form-lable">Date and Time</label>
+                                                        <div class="col-md-5">
+                                                            <input type="date" class="form-control" id="date" nwme="date"
+                                                                placeholder="Ddte">
+                                                        </div>
+                                                        <div class="col-md-5">
+                                                            <input type="time" class="form-control" id="time" nwme="time"
+                                                                placeholder="Time">
+                                                        </div>
+                                                    </div>
+                                                    <div class="form-group row">
+                                                        <div class="offset-md-2 col-md-10">
+                                                            <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                                                Cancel
+                                                            </button>
+                                                            <button type="submit" class="btn btn-primary">
+                                                                Reserve
+                                                            </button>
+                                                        </div>
+                                                    </div>
+                                            </form>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>    
 
     <div class="container">
         <div class="row row-content">
@@ -212,7 +299,7 @@
         </div>
     </div>
 
-
+<!--
         <div class="row row-content align-items-center justify-content-center">
             <div class="col-10 col-lg-6">
                 <div class="card">
@@ -246,31 +333,51 @@
                                 <label class="form-check-label" for="inlineRadio6">6</label>
                                 </div> 
                             </div>
-                        </div> 
-                            <form>                     
-                                <div class="form-group row">
-                                    <label for="telnum" class="col-12 col-md-2 col-form-lable">Date and Time</label>
-                                    <div class="col-md-5">
-                                        <input type="date" class="form-control" id="date" nwme="date"
-                                            placeholder="Ddte">
-                                    </div>
-                                    <div class="col-md-5">
-                                        <input type="time" class="form-control" id="time" nwme="time"
-                                            placeholder="Time">
-                                    </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="telnum" class="col-12 col-md-2 col-form-lable">Section</label>
+                            <div class="col-sm-10">
+                                <button type="button" class="btn btn-success ">NonSmoking</button>
+                                <button type="button" class="btn btn-danger">Smoking</button> 
+                                <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                    <label class="btn btn-secondary active">
+                                        <input type="radio" class="nonSmoking" name="nonSmoking" id="nonSmoking" autocomplete="off" checked> NonSmoking
+                                    </label>
+                                    <label class="btn btn-secondary">
+                                        <input type="radio" class="smoking" name="smoking" id="smoking" autocomplete="off"> Smoking
+                                    </label>
                                 </div>
-                            </form> 
-                            <div class="form-group row">
-                                    <div class="offset-md-2 col-md-10">
-                                        <button type="submit" class="btn btn-primary">
-                                            Reserve
-                                        </button>
-                                    </div>
                             </div>
+                        </div> 
+                        <form>                     
+                            <div class="form-group row">
+                                <label for="telnum" class="col-12 col-md-2 col-form-lable">Date and Time</label>
+                                <div class="col-md-5">
+                                    <input type="date" class="form-control" id="date" nwme="date"
+                                        placeholder="Ddte">
+                                </div>
+                                <div class="col-md-5">
+                                    <input type="time" class="form-control" id="time" nwme="time"
+                                        placeholder="Time">
+                                </div>
+                            </div>
+
+                            <div class="form-group row">
+                                <div class="offset-md-2 col-md-10">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">
+                                        Cancel
+                                    </button>
+                                    <button type="submit" class="btn btn-primary">
+                                        Reserve
+                                    </button>
+                                </div>
+                            </div>
+                        </form> 
                     </div>
                 </div>
             </div>
         </div>
+    -->
 
 
 
@@ -319,11 +426,12 @@
         <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
         <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
         <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script>
+<!--      <script>
             $(document).ready(function(){
                 $('[data-toggle="tooltip"]').tooltip();
             });
         </script>
+-->  
 
 </body>
 
