--- a/aboutus.html
+++ b/aboutus.html
@@ -163,6 +163,7 @@
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
         </div>
         <div class="row row-content">
